--- a/MVVM/View/Routines/RoutineCreator/WaveFormControls/PolylineWaveFormControl.xaml
+++ b/MVVM/View/Routines/RoutineCreator/WaveFormControls/PolylineWaveFormControl.xaml
@@ -7,7 +7,12 @@
              mc:Ignorable="d"
              Foreground="White"
              >
-    <Canvas x:Name="mainCanvas">
+    <Border Background="#272537"
+            CornerRadius="10"
+            >
+        <Canvas x:Name="mainCanvas">
 
-    </Canvas>
+        </Canvas>
+    </Border>
+
 </UserControl>
