--- a/MVVM/View/Routines/RoutineCreator/RoutineCreatorView.xaml
+++ b/MVVM/View/Routines/RoutineCreator/RoutineCreatorView.xaml
@@ -1,25 +1,46 @@
-﻿<UserControl x:Class="Scene_Maker.MVVM.View.RoutineCreatorView"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Scene_Maker.MVVM.View"
+             xmlns:WaveFormControls="clr-namespace:Scene_Maker.MVVM.View.Routines.RoutineCreator.WaveFormControls" 
+                x:Class="Scene_Maker.MVVM.View.RoutineCreatorView"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="#3A315C">
+    <Grid Background="#3A315C"
+          Name="CreatorView"
+          MouseMove="CreatorView_MouseMove"
+          MouseUp="CreatorView_MouseUp"
+          MouseLeave="CreatorView_MouseLeave"
+          >
         <Grid.RowDefinitions>
             <RowDefinition Height="200"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
 
         <Border 
+            Grid.Row="0"
             Margin="4"
             CornerRadius="6"
-            Background="#322953">
+            Background="#272537">
 
-            <ContentPresenter Content="{Binding AudioVisualizer}"/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="160"/>
+                </Grid.RowDefinitions>
+                <ContentPresenter Content="{Binding WavSeekController}" Grid.Row="0"/>
+                <ContentPresenter Content="{Binding AudioVisualizerView}" Grid.Row="1"/>
 
+            </Grid>
         </Border>
-            
+
+        <Border 
+            Grid.Row="1"
+            Margin="4"
+            CornerRadius="6"
+            Background="#3A315C">
+        </Border>
     </Grid>
 </UserControl>
