--- a/Theme/SystemMenuTheme.xaml
+++ b/Theme/SystemMenuTheme.xaml
@@ -34,22 +34,23 @@
 
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Foreground" Value="#7b7795"/>
+            <Setter Property="Foreground" Value="{DynamicResource SM_SystemMenuButtonText_Normal}"/>
             <Setter Property="Width" Value="38"/>
         </Style.Setters>
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="Foreground" Value="{DynamicResource SM_SystemMenuButtonText_MouseOver}"/>
             </Trigger>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#22202f"/>
+                <Setter Property="Background" Value="{DynamicResource SM_ButtonBG_MouseOver}"/>
             </Trigger>
 
         </Style.Triggers>
     </Style>
     
     <!-- // System Menu EXIT Button // -->
+    
     <Style BasedOn="{StaticResource {x:Type Button}}"
            TargetType="{x:Type Button}"
            x:Key="SystemExitButtonTheme">
@@ -94,5 +95,251 @@
 
         </Style.Triggers>
     </Style>
+
+    <!-- // System Menu w/SubMenu Template -->
+    <ControlTemplate x:Key="SystemMenuSubMenu_Template"
+                     TargetType="{x:Type MenuItem}">
+        <Border x:Name="border"
+                Background="Transparent"
+                BorderBrush="Transparent"
+                BorderThickness="0"
+                Padding="0,4,0,4"
+                CornerRadius="0,0,4,4"
+                >
+
+            <Grid>
+                <ContentPresenter ContentSource="Header"
+                                  x:Name="header"
+                                  TextBlock.Foreground="{DynamicResource SM_SystemMenuButtonText_Normal}"
+                                  TextBlock.FontWeight="UltraLight"
+                                  TextBlock.FontSize="18"
+                                  HorizontalAlignment="Left"
+                                  RecognizesAccessKey="True"
+                                  Margin="8,0,8,0"
+                                  VerticalAlignment="Top" />
+
+                <!--// Popup //-->
+
+                <Popup x:Name="PART_Popup"
+                       AllowsTransparency="true"
+                       Focusable="false"
+                       HorizontalOffset="0"
+                       IsOpen="{Binding IsSubmenuOpen, RelativeSource={RelativeSource TemplatedParent}}"
+                       Placement="Bottom"
+                       PopupAnimation="{DynamicResource {x:Static SystemParameters.MenuPopupAnimationKey}}"
+                       VerticalOffset="8">
+
+                    <Border x:Name="SubMenuBorder"
+                            Background="{DynamicResource SM_SystemSubmenuBG_Normal}"
+                            BorderBrush="{DynamicResource SM_SystemSubmenuBG_Normal}"
+                            CornerRadius="8"
+                            Margin="64">
+                        <Border.Effect>
+                            <DropShadowEffect BlurRadius="3" ShadowDepth="1" Opacity=".4" Color="#FF1D1D1D" Direction="270"/>
+                        </Border.Effect>
+
+                        <ScrollViewer x:Name="SubMenuScrollViewer"
+                                      Style="{DynamicResource {ComponentResourceKey ResourceId=MenuScrollViewer, TypeInTargetAssembly={x:Type FrameworkElement}}}">
+
+                            <Grid RenderOptions.ClearTypeHint="Enabled">
+
+                                <Canvas HorizontalAlignment="Left"
+                                        VerticalAlignment="Top" />
+
+                                <ItemsPresenter x:Name="ItemsPresenter"
+                                                KeyboardNavigation.DirectionalNavigation="Cycle"
+                                                Grid.IsSharedSizeScope="true"
+                                                KeyboardNavigation.TabNavigation="Cycle" />
+                            </Grid>
+                        </ScrollViewer>
+                    </Border>
+                </Popup>
+
+            </Grid>
+        </Border>
+
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsSuspendingPopupAnimation"
+                     Value="true">
+                <Setter Property="PopupAnimation"
+                        TargetName="PART_Popup"
+                        Value="None" />
+            </Trigger>
+
+            <Trigger Property="IsHighlighted"
+                     Value="True">
+                <Setter Property="Background"
+                        TargetName="border"
+                        Value="{DynamicResource SM_ButtonBG_Selected}" />
+                <Setter Property="BorderBrush"
+                        TargetName="border"
+                        Value="{DynamicResource SM_ButtonBG_Selected}" />
+                <Setter Property="TextBlock.Foreground"
+                        TargetName="header"
+                        Value="{DynamicResource SM_SystemMenuButtonText_MouseOver}"/>
+            </Trigger>
+
+            <MultiTrigger>
+                <MultiTrigger.Conditions>
+                    <Condition Property="IsMouseOver"
+                               Value="True"/>
+                    <Condition Property="IsSubmenuOpen"
+                               Value="False"/>
+                </MultiTrigger.Conditions>
+
+                <Setter Property="Background"
+                        TargetName="border"
+                        Value="{DynamicResource SM_ButtonBG_MouseOver}" />
+                <Setter Property="BorderBrush"
+                        TargetName="border"
+                        Value="{DynamicResource SM_ButtonBG_MouseOver}" />
+                <Setter Property="TextBlock.Foreground"
+                        TargetName="header"
+                        Value="{StaticResource SM_SystemMenuButtonText_MouseOver}"/>
+            </MultiTrigger>
+
+        </ControlTemplate.Triggers>
+
+
+    </ControlTemplate>
+    
+    <!-- // System Menu Template // -->
+    
+    <ControlTemplate x:Key="SystemMenu_Template"
+                     TargetType="{x:Type MenuItem}">
+        <Border x:Name="border"
+                Background="Transparent"
+                BorderBrush="Transparent"
+                BorderThickness="0"
+                Padding="0,4,0,4"
+                >
+            <ContentPresenter ContentSource="Header"
+                x:Name="header"
+                TextBlock.Foreground="{DynamicResource SM_SystemMenuButtonText_Normal}"
+                TextBlock.FontWeight="UltraLight"
+                TextBlock.FontSize="18"
+                HorizontalAlignment="Left"
+                RecognizesAccessKey="True"
+                Margin="8,0,8,0"
+                VerticalAlignment="Top" />
+        </Border>
+
+        <ControlTemplate.Triggers>
+
+            <Trigger Property="IsHighlighted"
+                     Value="True">
+                <Setter Property="Background"
+                        TargetName="border"
+                        Value="{DynamicResource SM_ButtonBG_Selected}" />
+                <Setter Property="BorderBrush"
+                        TargetName="border"
+                        Value="{DynamicResource SM_ButtonBG_Selected}" />
+                <Setter Property="TextBlock.Foreground"
+                        TargetName="header"
+                        Value="{StaticResource SM_SystemMenuButtonText_MouseOver}"/>
+            </Trigger>
+
+
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+    
+    <!-- // System Menu Item Template // -->
+    <ControlTemplate x:Key="SystemMenuItem_Template"
+                     TargetType="{x:Type MenuItem}">
+
+        <Border x:Name="border"
+                Background="{DynamicResource SM_SystemSubmenuBG_Normal}"
+                BorderBrush="{DynamicResource SM_SystemSubmenuBG_Normal}"
+                BorderThickness="{TemplateBinding BorderThickness}"
+                CornerRadius="8"
+                Padding="3,0,3,4"
+                >
+            <Grid>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition MinWidth="22"
+                                      Width="Auto" />
+                    <ColumnDefinition Width="13" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="30" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="20" />
+                </Grid.ColumnDefinitions>
+
+                <!-- // Icon // -->
+
+                <ContentPresenter x:Name="Icon"
+                                  ContentSource="Icon"
+                                  HorizontalAlignment="Center"
+                                  Height="16"
+                                  Width="16"
+                                  Margin="4,0,0,0"
+                                  VerticalAlignment="Stretch" />
+
+                <!-- // Menu Text // -->
+
+                <ContentPresenter ContentSource="Header"
+                                  x:Name="header"            
+                                  Grid.Column="2"
+                                  TextBlock.FontWeight="UltraLight"
+                                  TextBlock.Foreground="{DynamicResource SM_SystemMenuButtonText_Normal}"
+                                  TextBlock.FontSize="16"
+                                  TextBlock.TextAlignment="Center"
+                                  HorizontalAlignment="Left"
+                                  RecognizesAccessKey="True"
+                                  Margin="3,0,0,0"
+                                  VerticalAlignment="Top" />
+
+            </Grid>
+
+        </Border>
+
+        <ControlTemplate.Triggers>
+            <Trigger Property="Icon"
+                     Value="{x:Null}">
+                <Setter Property="Visibility"
+                        TargetName="Icon"
+                        Value="Visible" />
+            </Trigger>
+
+            <Trigger Property="IsChecked"
+                     Value="True">
+                <Setter Property="Visibility"
+                        TargetName="Icon"
+                        Value="Visible" />
+            </Trigger>
+
+            <Trigger Property="IsHighlighted"
+                     Value="True">
+                <Setter Property="Background"
+                        TargetName="border"
+                        Value="{DynamicResource SM_ButtonBG_Selected}" />
+                <Setter Property="BorderBrush"
+                        TargetName="border"
+                        Value="{DynamicResource SM_ButtonBG_Selected}" />
+                <Setter Property="TextBlock.Foreground"
+                        TargetName="header"
+                        Value="{StaticResource SM_SystemMenuButtonText_MouseOver}"/>
+            </Trigger>
+
+            <MultiTrigger>
+                <MultiTrigger.Conditions>
+                    <Condition Property="IsMouseOver"
+                               Value="True"/>
+                </MultiTrigger.Conditions>
+
+                <Setter Property="Background"
+                        TargetName="border"
+                        Value="{DynamicResource SM_SystemSubmenuBG_MouseOver}" />
+                <Setter Property="BorderBrush"
+                        TargetName="border"
+                        Value="{DynamicResource SM_SystemSubmenuBG_MouseOver}" />
+                <Setter Property="TextBlock.Foreground"
+                        TargetName="header"
+                        Value="{StaticResource SM_SystemMenuButtonText_MouseOver}"/>
+            </MultiTrigger>
+        </ControlTemplate.Triggers>
+
+    </ControlTemplate>
     
 </ResourceDictionary>
