--- a/MVVM/View/InnerNav/SimpleBackNavOptions.xaml
+++ b/MVVM/View/InnerNav/SimpleBackNavOptions.xaml
@@ -13,6 +13,7 @@
             CornerRadius="10,10,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Bottom"
+                Margin="0,0,8,0"
             >
       
             
