--- a/App.xaml
+++ b/App.xaml
@@ -1,4 +1,4 @@
-<Application x:Class="Scene_Maker.App"
+﻿<Application x:Class="Scene_Maker.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:viewModel="clr-namespace:Scene_Maker.MVVM.ViewModel"
@@ -14,7 +14,7 @@
                 <ResourceDictionary Source="Theme/InnerBackButtonTheme.xaml"/>
                 <ResourceDictionary Source="Theme/MenuButtonOneshotTheme.xaml"/>
                 <ResourceDictionary Source="Theme/SystemMenuTheme.xaml"/>
-                <ResourceDictionary Source="Theme/ThemeColors.xaml"/>
+                <ResourceDictionary Source="Theme/Templates.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate DataType="{x:Type viewModel:AllRoutinesViewModel}">
