--- a/MVVM/View/InnerNav/SimpleBackNavOptions.xaml
+++ b/MVVM/View/InnerNav/SimpleBackNavOptions.xaml
@@ -9,12 +9,11 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid>
-        <Border Background="#3A315C"
+        <Border Background="{DynamicResource IN_ButtonBG_Normal}"
             CornerRadius="10,10,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Bottom"
-                Margin="0,0,8,0"
-            >
+                Margin="0,0,8,0">
       
             
             <Button 
